[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easierlit"
version = "0.3.1"
description = "A minimal library to make Chainlit easier to use."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "chainlit>=2.9,<3",
  "aiosqlite>=0.20",
  "pydantic>=2.0",
  "typing-extensions>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "build>=1.2",
  "twine>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
